--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
         <li  data-menuanchor="page5">
           <a href="#page5">Projects</a>
         </li>
-        <li  data-menuanchor="page7">
-          <a href="#page7">Testimonials</a>
+        
         </li>
         <li  data-menuanchor="page8">
           <a href="#page8">Contact</a>
@@ -62,7 +61,7 @@
           <a href="" class="icon ion-social-linkedin"></a>
           <a href="" class="icon ion-social-dribbble-outline"></a>
         </div>
-        <div class="copy">© Ramsay 2019. All Rights Reseverd</div>
+        <div class="copy">© Abhit Anand 2020. All Rights Reseverd</div>
       </div>
     </div>
 
