--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="intro">
                       <div class="row">
                         <div class="col-md-8 col-lg-6">
-                          <h1 class="display-2 text-white  wow fadeIn" data-wow-delay="0.1s"><span class="text-primary">Hi,</span> I'm Abhit</h1>
+                          <h1 class="display-2 text-white  wow fadeIn names" data-wow-delay="0.1s"><span class="text-primary">Hi,</span> I'm Abhit</h1>
                           <a class="popup-youtube"  href="https://www.linkedin.com/in/abhit-anand-165a011a2/"><span class="icon ion-ios-play"></span>Download Resume</a>
                         </div>
                       </div>
