--- a/index.html
+++ b/index.html
@@ -118,7 +118,12 @@
                       <div class="row">
                         <div class="col-md-8 col-lg-6">
                           <h1 class="display-2 text-name  wow fadeIn names" data-wow-delay="0.1s"><span class="text-primary">Hi,</span><span class="iam"> I'm </span><span class"namea">Abhit</span></h1>
-                          <a class="popup-youtube"  href="https://www.linkedin.com/in/abhit-anand-165a011a2/"><span class="icon ion-ios-play"></span>Download Resume</a>
+                          <h1 class="display-2 text-name wow fadeIn" data-wow-delay="0.1s"><span class="text-primary">Anand</span></h1>>
+                          <div class="view-all >
+                            <a href="#">
+                              <h2><span class="text-primary resume">Download Resume</span></h2>
+                            </a>
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -156,11 +161,7 @@
                           <p>I firmly  believe  that no app can succeed without a proper UI thefore I pay special attention to the frontend of my Apps.</p>
                         </div>
                       </div>
-                      <div class="view-all">
-                        <a href="#">
-                          Download resume
-                        </a>
-                      </div>
+                     
                     </div>
                   </div>
                 </div>
