enabled download for resume but redirects 2 google

--- a/index.html
+++ b/index.html
@@ -122,9 +122,8 @@
                           <h1 class="display-2 text-name  wow fadeIn names" data-wow-delay="0.1s"><span class="text-primary">Hi,</span><span class="iam"> I'm </span><span class"namea">Abhit</span></h1>
                           
                           <div class="view-all >
-                            <a href="#">
-                              <h2><span class="text-primary resume">Download Resume</span></h2>
-                            </a>
+                            <a href="https://google.com" class="text-primary resume"></a>
+                            <a href="https://google.com">Download Resume</a>
                           </div>
                         </div>
                       </div>
