--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           <a href="#page2">Specialization</a>
         </li>
         <li  data-menuanchor="page3">
-          <a href="#page3">Resume</a>
+          <a href="#page3">Education and Courses</a>
         </li>
         <li  data-menuanchor="page4">
-          <a href="#page4">About</a>
+          <a href="#page4">Skill Sets</a>
         </li>
         <li  data-menuanchor="page5">
           <a href="#page5">Projects</a>
@@ -52,7 +52,7 @@
         
         </li>
         <li  data-menuanchor="page8">
-          <a href="#page8">Contact</a>
+          <a href="#page7">Contact</a>
         </li>
       </ul>
       <div class="menu-footer right-boxed">
