--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content="">
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="">
+<link rel="shortcut icon" href="logo.png">
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
@@ -73,7 +73,7 @@
     <header class="navbar navbar-fullpage boxed">
       <div class="navbar-bg"></div>
       <a class="brand" href="#">
-        <img alt="" src="images/brand.pn">
+        <img alt="" src="">
         <div class="brand-info">
           <div class="brand-name">Abhit Anand</div>
         </div>
