--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114.png">
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 <title>Abhit Anand</title> 
 
@@ -54,6 +55,7 @@
         <li  data-menuanchor="page8">
           <a href="#page7">Contact</a>
         </li>
+        <li><div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="abhit-anand-165a011a2"><a class="LI-simple-link" href='https://in.linkedin.com/in/abhit-anand-165a011a2?trk=profile-badge'>Abhit Anand</a></div></li>
       </ul>
       <div class="menu-footer right-boxed">
         <div class="social-list">
@@ -62,6 +64,7 @@
           
           <a href="https://www.linkedin.com/in/abhit-anand-165a011a2/" class="icon ion-social-linkedin"></a>
           <a href="https://github.com/abhitcr1" class="icon ion-social-github"></a>
+          
         </div>
         <div class="copy">© Abhit Anand 2020. All Rights Reseverd</div>
       </div>
