--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                           
                           <div class="view-all >
                             <a href="https://google.com" class="text-primary resume"></a>
-                            <a href="https://google.com">Download Resume</a>
+                            <a href="https://drive.google.com/file/d/1y2ZLp4Keu8Tk6Va5Fy385WmAwmKYx8RR/view?usp=sharing">Download Resume</a>
                           </div>
                         </div>
                       </div>
