--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@
                                   <span id="error" class="text-primary">Sorry, something went wrong </span>
                                 </div>
                                 <div class="col-sm-12"><button type="submit" class="btn">Contact me</button></div>
+                                                                                        <img src="https://hitcounter.pythonanywhere.com/count/tag.svg?url=https%3A%2F%2Fabhitcr1.github.io" alt="Hits">
                               </div>
                             </form>
                           </div>
